#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT(racktk, 0.0.1, youssef.eldakar@bibalex.org)
AM_INIT_AUTOMAKE(racktk, 0.0.1)

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 lib/Makefile
                 lib/Racktk/Makefile
                 scripts/Makefile])
AC_OUTPUT
